# libac-rs

./: Cargo.toml  README.md
src/: cli_helper.rs  icon.rs  lib.rs  main.rs
src/dat/: dat_database.rs  mod.rs
src/dat/enums/: dat_file_type.rs  mod.rs  surface_pixel_format.rs
src/dat/file_types/: dat_file.rs  mod.rs  texture.rs
src/dat/reader/: async_dat_block_reader.rs  async_file_reader.rs  async_http_chunk_reader.rs  async_http_io_adapter.rs  async_reader.rs  constants.rs  dat_block_reader.rs  dat_database_header.rs  dat_database_type.rs  dat_directory.rs  dat_directory_entry.rs  dat_file_reader.rs  dat_file_type.rs  dat_reader.rs  file_reader.rs  http_reader.rs  mod.rs  range_reader.rs  sync_dat_file_reader.rs  worker_r2_reader.rs
src/dat/reader/types/: dat_database.rs  dat_database_header.rs  dat_directory.rs  dat_directory_entry.rs  mod.rs
