[package]
name = "libac-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
futures = "0.3"
futures-util = "0.3.31"
image = "0.25.5"
num-derive = "0.4.2"
num-traits = "0.2.19"
reqwest = "0.12.15"
tokio = { version = "1.44.1", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
